# RAFEEQ

./: .env.example  .env.production.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
edge/robot/: THIRD_PARTY_NOTICES.md  pyproject.toml
edge/robot/src/rafeeq_robot/: __init__.py  config.py  main.py
edge/robot/src/rafeeq_robot/application/: emergency_manager.py  event_bus.py  openai_voice_agent.py  outbox_service.py  reminder_service.py  sync_service.py  voice_interactor.py
edge/robot/src/rafeeq_robot/detection/: interfaces.py  mock_detector.py  pose_detector.py  trained_detector.py  webcam_demo.py
edge/robot/src/rafeeq_robot/domain/: events.py  states.py
edge/robot/src/rafeeq_robot/hardware/: interfaces.py
edge/robot/src/rafeeq_robot/hardware/simulation/: adapters.py
edge/robot/src/rafeeq_robot/hardware/voice/: __init__.py  openai_transcription_adapter.py  piper_speaker.py  vosk_adapter.py  windows_speaker.py
edge/robot/src/rafeeq_robot/persistence/: database.py  migrations.py  models.py
edge/robot/src/rafeeq_robot/transport/: http_client.py
edge/robot/tests/: test_console_speaker.py  test_event_bus.py  test_offline_reminders.py  test_pose_detector.py  test_trained_detector.py  test_voice_interactor.py
services/backend/: Dockerfile  alembic.ini  pyproject.toml
services/backend/migrations/: env.py  script.py.mako
services/backend/migrations/versions/: 0afcf58f723e_add_audit_log.py  213891e728c4_initial_identity_patient_routine_.py  ae81fbac8651_add_activities_memories_and_doctor_notes.py
services/backend/src/rafeeq_backend/: __init__.py  config.py  database.py  main.py  models.py
services/backend/src/rafeeq_backend/api/: errors.py  middleware.py  router.py
services/backend/src/rafeeq_backend/modules/activities/api/: __init__.py  router.py
services/backend/tests/: test_auth_patients.py  test_health.py  test_voice_persona.py
(+178 files in other folders)
