[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rafeeq-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic-settings>=2.6,<3",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
  "alembic>=1.14,<2",
  "redis>=5,<6",
  "paho-mqtt>=2,<3",
  "PyJWT>=2.10,<3",
  "pwdlib[argon2]>=0.3,<1",
  "email-validator>=2.2,<3",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = ["httpx>=0.28,<1", "mypy>=1.13,<2", "pytest>=8.3,<9", "ruff>=0.8,<1"]

[tool.hatch.build.targets.wheel]
packages = ["src/rafeeq_backend"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
